--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <title>MoteApp</title>
@@ -11,21 +11,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
   <link rel="stylesheet" type="text/css" href="assets/layout/styles/layout/preloading.css">
   <link id="theme-link" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/theme-light/indigo/theme.css">
-
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&display=swap" rel="stylesheet" />
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link rel="manifest" href="manifest.webmanifest" />
   <meta name="theme-color" content="#1976d2" />
-  <link rel="manifest" href="manifest.webmanifest" />
-  <meta name="theme-color" content="#1976d2" />
-  <link rel="manifest" href="manifest.webmanifest" />
-  <meta name="theme-color" content="#1976d2" />
 </head>
-
 <body>
-  <script src="https://accounts.google.com/gsi/client" async></script>
+
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
-
 </html>
